Update IAC security scan .yml

--- a/.github/workflows/IAC security scan .yml
+++ b/.github/workflows/IAC security scan .yml
@@ -25,9 +25,9 @@ jobs:
             - name: Run Trivy vulnerability scanner in fs mode
               uses: aquasecurity/trivy-action@master
               with:
-                scan-type: ‘fs’
+                scan-type: 'fs'
                 scanners: ‘misconfig’
-                scan-ref: ‘.’
+                scan-ref: '.'
                 hide-progress: false
-                format: ‘table’
+                format: 'table'
                 ignore-unfixed: true
