--- a/.github/workflows/IAC security scan .yml
+++ b/.github/workflows/IAC security scan .yml
@@ -26,7 +26,7 @@ jobs:
               uses: aquasecurity/trivy-action@master
               with:
                 scan-type: 'fs'
-                scanners: ‘misconfig’
+                scanners: 'misconfig'
                 scan-ref: '.'
                 hide-progress: false
                 format: 'table'
