Update IAC security scan .yml

--- a/.github/workflows/IAC security scan .yml
+++ b/.github/workflows/IAC security scan .yml
@@ -37,3 +37,4 @@ jobs:
           format: 'json'        # Changed from 'table' to 'json'
           output: 'trivy-results.json'  # Added to save results to a file
           ignore-unfixed: true
+          severity: 'CRITICAL,HIGH,MEDIUM'
